--- a/tcc3portal/api/translations/zh_Hans_CN/LC_MESSAGES/messages.po
+++ b/tcc3portal/api/translations/zh_Hans_CN/LC_MESSAGES/messages.po
@@ -1,16 +1,16 @@
-# Chinese (Simplified, China) translations for PROJECT.
-# Copyright (C) 2015 ORGANIZATION
-# This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
+# Chinese (Simplified, China) translations for tcc3portal.
+# Copyright (C) 2015 Vito
+# This file is distributed under the same license as the tcc3portal project.
+# Vito <vito2015@live.com>, 2015.
 #
-#, fuzzy
+# ###, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-11-13 19:45+0800\n"
-"PO-Revision-Date: 2015-11-13 19:47+0800\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Project-Id-Version: tcc3portal 1.0.1\n"
+"Report-Msgid-Bugs-To: vito2015@live.com\n"
+"POT-Creation-Date: 2015-11-15 03:51+0800\n"
+"PO-Revision-Date: 2015-11-15 03:41+0800\n"
+"Last-Translator: Vito <vito2015@live.com>\n"
 "Language: zh_Hans_CN\n"
 "Language-Team: zh_Hans_CN <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -19,3 +19,112 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.1.1\n"
 
+#: list.py:20
+msgid "List"
+msgstr "列表"
+
+#: list.py:22
+msgid "show all apis."
+msgstr "显示所有API"
+
+#: list.py:25 list.py:30
+msgid "User"
+msgstr "用户"
+
+#: list.py:27
+msgid "show all users."
+msgstr "显示所有用户。"
+
+#: list.py:32
+msgid "show a single user what you wanna."
+msgstr "根据用户名查找指定用户。"
+
+#: templates/api_list.html:9
+#, python-format
+msgid "Part of %(grouper)s"
+msgstr "%(grouper)s部分"
+
+#: templates/layouts/base.html:5
+msgid "Api"
+msgstr "接口"
+
+#: templates/layouts/base.html:10
+msgid "Home"
+msgstr "主页"
+
+#: templates/layouts/base.html:11
+msgid "OtherPage1"
+msgstr "其他页面1"
+
+#: templates/layouts/base.html:12
+msgid "OtherPage2"
+msgstr "其他页面2"
+
+#: templates/layouts/base.html:14
+msgid "Tech Support"
+msgstr "技术支持"
+
+#: templates/layouts/base.html:25
+msgid "Level 2 menu"
+msgstr "二级菜单"
+
+#: templates/layouts/base.html:27 templates/layouts/base.html:28
+#: templates/layouts/base.html:29
+msgid "Level 3 menu"
+msgstr "三级菜单"
+
+# # base on tcc_core
+#: sso.py:103 sso.py:108
+msgid "Please login to access this page."
+msgstr "请登录后访问该页面。"
+
+#: sso.py:112
+msgid "Please login for access."
+msgstr "请登录后访问。"
+
+# # base on tcc_frontend
+#: templates/frontend/base.html:7
+msgid "TCC3 Portal"
+msgstr "TCC3门户"
+
+#: templates/frontend/base.html:9
+msgid "A TCC3 flask web portal site frame"
+msgstr "一个基于Flask架构的网站门户框架"
+
+#: templates/frontend/footer.html:7
+#, python-format
+msgid "Powered by %(flask)s"
+msgstr "%(flask)s技术提供"
+
+#: templates/frontend/footer.html:11
+#, python-format
+msgid "Copyright &copy; 2015, %(author)s"
+msgstr "Copyright &copy; 2015, %(author)s"
+
+#: templates/frontend/navbar_login.html:2
+msgid "Welcome, Anonymous!"
+msgstr "欢迎，游客！"
+
+#: templates/frontend/navbar_login.html:3
+msgid "Login"
+msgstr "登录"
+
+#: templates/frontend/navbar_login.html:4
+msgid "Signup"
+msgstr "注册"
+
+#: templates/frontend/navbar_login.html:9
+msgid "Profile"
+msgstr "个人信息"
+
+#: templates/frontend/navbar_login.html:11
+msgid "Logout"
+msgstr "注销登录"
+
+#: templates/frontend/errors/404.html:6
+msgid "Page Not Found."
+msgstr "访问的页面不存在。"
+
+#: templates/frontend/errors/500.html:6
+msgid "Internal Server Error."
+msgstr "服务器内部错误。"
